RESOLVED FIXED171764
[Mac] Adjust cursor position for dragged link (and stop it from moving based on how fast you are dragging)
https://bugs.webkit.org/show_bug.cgi?id=171764
Summary [Mac] Adjust cursor position for dragged link (and stop it from moving based ...
Tim Horton
Reported 2017-05-05 18:19:01 PDT
[Mac] Adjust cursor position for dragged link (and stop it from moving based on how fast you are dragging)
Attachments
Patch (14.02 KB, patch)
2017-05-05 18:19 PDT, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2017-05-05 18:19:16 PDT
Build Bot
Comment 2 2017-05-05 18:21:23 PDT
Attachment 309253 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/Cocoa/WebViewImpl.mm:3782: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3 2017-05-05 18:39:43 PDT
Note You need to log in before you can comment on or make changes to this bug.