Source/WebCore/page/DragController.h
@@ -94,7 +94,6 @@ struct DragState;
         bool startDrag(Frame& src, const DragState&, DragOperation srcOp, const PlatformMouseEvent& dragEvent, const IntPoint& dragOrigin);
         static const IntSize& maxDragImageSize();
         
-        static const int LinkDragBorderInset;
         static const int MaxOriginalImageArea;
         static const int DragIconRightInset;
         static const int DragIconBottomInset;        
