Source/WebCore/page/gtk/DragControllerGtk.cpp
@@ -39,7 +39,6 @@ namespace WebCore {
 
 // FIXME: These values are straight out of DragControllerMac, so probably have
 // little correlation with Gdk standards...
-const int DragController::LinkDragBorderInset = 2;
 const int DragController::MaxOriginalImageArea = 1500 * 1500;
 const int DragController::DragIconRightInset = 7;
 const int DragController::DragIconBottomInset = 3;
