Source/WebCore/page/win/DragControllerWin.cpp
@@ -36,7 +36,6 @@
 
 namespace WebCore {
 
-const int DragController::LinkDragBorderInset = 2;
 const int DragController::MaxOriginalImageArea = 1500 * 1500;
 const int DragController::DragIconRightInset = 7;
 const int DragController::DragIconBottomInset = 3;
